--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
 
   },
   "ConnectionStrings": {
-    "DbConnection": "Server=USER-PC\\SQLEXPRESS;Database=MyFullstackPokemon;Trusted_Connection=True;TrustServerCertificate=True;Integrated Security=True;MultipleActiveResultSets=True;"
+    "DbConnection": "Server=USER-PC\\SQLEXPRESS;Database=MyNewPokemonDB;Trusted_Connection=True;TrustServerCertificate=True;Integrated Security=True;MultipleActiveResultSets=True;"
   },
 
   "AllowedHosts": "*"
